k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/appointments
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port: 
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 3001
